--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" href="data:image/svgxml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
         {% endblock %}
 
@@ -11,6 +11,15 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+                <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
+                <ul>
+                    {% for conference in conferences %}
+                            <li><a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a></li>
+                        {% endfor %}
+                    </ul>
+                <hr />
+            </header>
         {% block body %}{% endblock %}
     </body>
 </html>
